FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__RCA__c.object
<CustomObject>
    <description>Object to support Root Cause Analysis.</description>
    <fields>
        <fullName>agf__AAR_Record_Link__c</fullName>
        <label>AAR Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__AAR__c</fullName>
        <label>AAR #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Action_Plan_Completion_Date__c</fullName>
        <label>Action Plan Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Action_Plan_Summary__c</fullName>
        <label>Action Plan Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Action_Plan__c</fullName>
        <label>Action Plan in Scrumforce</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RCA_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Root Cause Analysis</relationshipLabel>
        <relationshipName>RCA_Bug</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Category_Other__c</fullName>
        <inlineHelpText>We all hate the other field but over time this free text field might give us a good indication of what we are missing in the previous category fields.</inlineHelpText>
        <label>Root Cause Category (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Customer_Impacting__c</fullName>
        <label>Customer Impacting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Duration__c</fullName>
        <label>Duration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Estimated_Delivery__c</fullName>
        <inlineHelpText>Message Owners: Use this field to update Support on the ETA for the RCM/Issue Message if you are still investigating and will not have the message within the 5 business day SLA.  Flip &quot;Message Status&quot; to &quot;Under Investigation&quot;</inlineHelpText>
        <label>Estimated Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Incident_End_Time__c</fullName>
        <label>Incident End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Incident_Participants__c</fullName>
        <label>Incident Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Incident_Start_Time__c</fullName>
        <label>Incident Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Message_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tier 3 case owner who requested the messaging on behalf of the customer.</inlineHelpText>
        <label>Message Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Root_Cause_Analysis2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Message_Status__c</fullName>
        <label>Message Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Still Investigating</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Messaging_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to identify messaging owner. OSC for RCA + RCM service incidents, Product Manager for RCA + RCM or Issue Message for product incidents.</description>
        <inlineHelpText>Field to identify messaging owner. OSC for RCA + RCM service incidents, Product Manager for RCA + RCM or Issue Message for product incidents.</inlineHelpText>
        <label>Messaging Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mess_Root_Cause_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Completed_Date__c</fullName>
        <inlineHelpText>Date when the RCA owner finishes filling in the details.</inlineHelpText>
        <label>RCA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Incident_Summary__c</fullName>
        <description>Brief summary of what occurred.</description>
        <inlineHelpText>Brief summary of what occurred.</inlineHelpText>
        <label>RCA Incident Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Invitees__c</fullName>
        <label>RCA Invitees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Participants__c</fullName>
        <label>RCA Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__RCA_Review_Forum__c</fullName>
        <label>RCA Review Forum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applications Review</fullName>
                </value>
                <value>
                    <fullName>Analytics Big Data Review</fullName>
                </value>
                <value>
                    <fullName>Automation Review</fullName>
                </value>
                <value>
                    <fullName>Core Review</fullName>
                </value>
                <value>
                    <fullName>data.com Review</fullName>
                </value>
                <value>
                    <fullName>HA Review</fullName>
                </value>
                <value>
                    <fullName>Internal HA Review</fullName>
                </value>
                <value>
                    <fullName>IT Review</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Platform Review</fullName>
                </value>
                <value>
                    <fullName>work.com Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__RCA_Status__c</fullName>
        <inlineHelpText>Allows the team to see how many RCA records are still pending completion.</inlineHelpText>
        <label>RCA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>RCA Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed - RCA Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - Action Plan Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__RCA_Type__c</fullName>
        <inlineHelpText>5 value options are presented here to allow the owner to categorize the release at a high level.</inlineHelpText>
        <label>RCA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Release/Break-Fix Request</fullName>
                </value>
                <value>
                    <fullName>Deployment Delayed</fullName>
                </value>
                <value>
                    <fullName>Rollback</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Incomplete Code Release</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Incomplete Deployment</fullName>
                </value>
                <value>
                    <fullName>Performance Degradation</fullName>
                </value>
                <value>
                    <fullName>Service Degradation</fullName>
                </value>
                <value>
                    <fullName>Service Disruption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__RCM_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether or not messaging is required for a given incident.</description>
        <inlineHelpText>Check this box if a customer has requested formal root cause messaging.</inlineHelpText>
        <label>RCM Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__RCM_Type__c</fullName>
        <inlineHelpText>Use this field to denote if the RCM or Issue Message request was verbal or written. If the customer did not specify, the message should always be delivered verbally.</inlineHelpText>
        <label>Message Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verbal</fullName>
                    <default>true</default>
                    <label>Verbal</label>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Ready_for_Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Messaging Owners: Check this box when the RCM is ready for manager approval.</inlineHelpText>
        <label>Ready for Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Gives the team the ability to tie the RCA records to specific releases in GUS to gather valuable metrics over time.</inlineHelpText>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Root Cause Analysis</relationshipLabel>
        <relationshipName>RCA_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Reported_By__c</fullName>
        <label>Reported By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External Customer</fullName>
                </value>
                <value>
                    <fullName>Internal Customer</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Request_Details__c</fullName>
        <defaultValue>&quot;Please include the Account Name, Contact Name &amp; Case Number of the messaging request.&quot;</defaultValue>
        <inlineHelpText>Please include the Account and Contact names, Case Number, and any other details related to this request</inlineHelpText>
        <label>Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Review_Date__c</fullName>
        <inlineHelpText>Indicates when a particular RCA is reviewed in a given management meeting.</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Root_Cause_Category__c</fullName>
        <inlineHelpText>Many more options are provided here to categorize the incident at a more granular level.</inlineHelpText>
        <label>Root Cause Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>agf__RCA_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Variable</fullName>
                </value>
                <value>
                    <fullName>Environment Disparity</fullName>
                </value>
                <value>
                    <fullName>Customer-Specific Environment Issue</fullName>
                </value>
                <value>
                    <fullName>Impact from Another Team</fullName>
                </value>
                <value>
                    <fullName>Insufficient Automation</fullName>
                </value>
                <value>
                    <fullName>Inadequate Test Coverage</fullName>
                </value>
                <value>
                    <fullName>Inadequate Functional Design</fullName>
                </value>
                <value>
                    <fullName>Misunderstood Dependencies</fullName>
                </value>
                <value>
                    <fullName>Corner Case</fullName>
                </value>
                <value>
                    <fullName>Known Issue that was Deprioritized</fullName>
                </value>
                <value>
                    <fullName>Deficient Usability</fullName>
                </value>
                <value>
                    <fullName>Documentation Issue</fullName>
                </value>
                <value>
                    <fullName>Translation Issue</fullName>
                </value>
                <value>
                    <fullName>Hardware/Network Issues</fullName>
                </value>
                <value>
                    <fullName>Regression</fullName>
                </value>
                <value>
                    <fullName>Autobuild Issue</fullName>
                </value>
                <value>
                    <fullName>Code Checked into Incorrect Branch</fullName>
                </value>
                <value>
                    <fullName>Staging/Promotion Issue</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Incomplete Code Released</fullName>
                </value>
                <value>
                    <fullName>Release Runner Issues</fullName>
                </value>
                <value>
                    <fullName>DICE Issues</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Operator Error</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Root_Cause_Messaging__c</fullName>
        <defaultValue>&quot;Messaging Templates: https://sites.google.com/a/salesforce.com/release-operations-program-management/Home/release-processes/whats-on-the-release-operations-backlog/root-cause-analysis-process&quot;</defaultValue>
        <description>This field is used to record the customer facing messaging pertaining to a given incident.  The messaging falls under two different categories, &quot;Product&quot; &amp; &quot;Service&quot; related.  There is a template for each that can be found here: https://sites.google.com/a/salesforce.com/release-operations-program-management/Home/release-processes/whats-on-the-release-operations-backlog/root-cause-analysis-process.</description>
        <inlineHelpText>This field is in the process of being EOL&apos;d. Please attach the RCM to the appropriate RCA record.</inlineHelpText>
        <label>Root Cause Messaging</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Root Cause Analysis</relationshipLabel>
        <relationshipName>RCA_Scrum_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Timeline_of_Events__c</fullName>
        <label>Timeline of Events</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_was_the_customer_impact__c</fullName>
        <inlineHelpText>This answers the question of who was affected by the incident.  Was it all customers?  Only customers on NAX?</inlineHelpText>
        <label>What was the customer impact?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__What_was_the_resolution__c</fullName>
        <inlineHelpText>This is a fairly straightforward question that asks the owner to detail how exactly the incident was resolved.</inlineHelpText>
        <label>What was the resolution?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Why_did_this_occur_2__c</fullName>
        <defaultValue>&quot;Include the 5 reasons (why&apos;s) for the Incident - http://en.wikipedia.org/wiki/5_Whys&quot;</defaultValue>
        <inlineHelpText>“The 5 Whys is a question-asking method used to explore the cause/effect relationships underlying a particular problem. Ultimately, the goal of applying the 5 Whys method is to determine a root cause of a defect or problem.”</inlineHelpText>
        <label>Why did this occur?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Root Cause Analysis</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__RCA_Status__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Assignee__c</columns>
        <columns>agf__Root_Cause_Category__c</columns>
        <columns>agf__Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCA-{0000000}</displayFormat>
        <label>RCA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause Analysis</pluralLabel>
    <recordTypes>
        <fullName>agf__Issue_Message</fullName>
        <active>true</active>
        <description>Choose this Record Type if the request for message does not meet RCM criteri but is  a P0 bug, a P1 or P2 bug with significant customer impact (10+ customers or top customer), or by management (Support or Technology) request</description>
        <label>Issue Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__RCA_Only</fullName>
        <active>true</active>
        <description>Choose this record type if this is a request only for a Root Cause Analysis (no messaging request).</description>
        <label>RCA Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__RCA_RCM_Request</fullName>
        <active>true</active>
        <description>Choose this record type if a customer has requested an RCM and this meets the criteria for an RCA</description>
        <label>RCA/RCM Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>